--- a/calendar.html
+++ b/calendar.html
@@ -3,19 +3,47 @@
 <head>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="/main.js"></script>
+<script src="/js/main.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-<link href="/main.css" rel="stylesheet">
-<link href="/navbar.css" rel="stylesheet">
+<link href="/css/main.css" rel="stylesheet">
+<link href="/css/navbar.css" rel="stylesheet">
 
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
+
+<style>
+
+.main {
+	width: 100%;
+	text-align: center;
+}
+
+.calend {
+	display: inline-block;
+}
 
 </head>
 
 <body>
 
-<iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+<div class="main">
+	<div class="navbar navbar-tall">
+		<ul class="top-navbar">
+			<li class="top-navbar-li">
+	        		<a id="a-about">About</a>
+	        	</li>
+	        	<li class="top-navbar-li">
+	                	<a href="belmontrobotics.github.io#donate">Donate</a>
+	        	</li>
+			<li class="top-navbar-li picture">
+	                </li>
+		</ul>
+	</div>
+
+	<div class="calend">
+		<iframe src="/util/custom_calendar.html" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+	</div>
+</div>
 
 </body>
 
