--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="/main.js"></script>
+<script src="/js/main.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-<link href="/main.css" rel="stylesheet">
-<link href="/navbar.css" rel="stylesheet">
+<link href="/css/main.css" rel="stylesheet">
+<link href="/css/navbar.css" rel="stylesheet">
 
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
 
