--- a/util/custom_calendar.html
+++ b/util/custom_calendar.html
@@ -6,13 +6,13 @@
 <script>gcal$perf$serverTime=12;gcal$perf$headStartTime=new Date().getTime()</script>
 <style type="text/css">body{margin:0;padding:0;overflow-y:hidden;}
         html{overflow-y:hidden;}</style>
-<link type="text/css" rel="stylesheet" href="http://calendar.google.com/calendar/static/f60b77051a573b521b70e0d5dacd787bembedcompiled_fastui.css">
+<link type="text/css" rel="stylesheet" href="https://calendar.google.com/calendar/static/f60b77051a573b521b70e0d5dacd787bembedcompiled_fastui.css">
 <link type="text/css" rel="stylesheet" href="/css/custom_calendar.css">
 
 <script type="text/javascript">
     function _DumpException(e) { throw e; }
     </script>
-<script type="text/javascript" src="http://calendar.google.com/calendar/_/scs/calendar-static/_/js/k=calendar.embed.en.F7fgRbhtLdU.O/m=embed/rt=j/d=1/rs=ANwU0p5GGXgYmVnWAX-pob2MbdvJ5KRF3Q"></script>
+<script type="text/javascript" src="https://calendar.google.com/calendar/_/scs/calendar-static/_/js/k=calendar.embed.en.F7fgRbhtLdU.O/m=embed/rt=j/d=1/rs=ANwU0p5GGXgYmVnWAX-pob2MbdvJ5KRF3Q"></script>
 <script>function _onload() {window._init({"features":[1,1,1,1,0,0,0,1,1,0,1,1,0,0,0,0,1,1,0,0,1,1,1,0,1,1,0,1,1,0,0,0,1,0,0,0,1,1,0,0,1,1,1,1,0,1,0,1,1,1,1,0,0,1,1,0,0,1,0,0,1,1,0,0,1,0,0,0,1,0,1,0,1,0,1,1,0,1,0,1,0,1,0,0,0,0,0,1,1,1,1,1,0,1,0,1,1,1,1,0,0,1,0,1,1,0,0,0,0,1,0,0],"loggedin":true,"cids":{},"view":"month","weekstart":0,"format24hour":false,"dateFieldOrder":0,"preloadStart":"20170128","preloadEnd":"20170307","container":"container","baseUrl":"/","imagePath":"http://calendar.google.com/googlecalendar/images/","showNavigation":true,"showDateMarker":true,"showTabs":true,"showCalendarMenu":true,"showCurrentTime":false,"showTz":false,"showPrintButton":false,"showElementsLogo":false,"collapseAllday":false,"showSubscribeButton":true,"embedStyle":"WyJhdDplbWI6c3QiXQo\u003d","proxyUrl":"https://clients6.google.com","calendarApiVersion":"v3","developerKey":"AIzaSyBNlYH01_9Hc5S1J9vuFmu2nUqBZJNAXxs"});}</script>
 <script type="text/javascript">
       var pageLoaded_ = false;
