--- a/calendar.html
+++ b/calendar.html
@@ -21,6 +21,7 @@
 .calend {
 	margin-top: 110px;
 	display: inline-block;
+	padding: 10px 60px;
 }
 
 </style>
@@ -44,7 +45,7 @@
 	</div>
 
 	<div class="calend">
-		<iframe src="/util/custom_calendar.html" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+		<iframe src="/util/custom_calendar.html" style="border-width:0" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
 	</div>
 </div>
 
