--- a/calendar.html
+++ b/calendar.html
@@ -20,15 +20,14 @@
 }
 
 .calend {
-	margin-top: 110px;
 	display: inline-block;
-	padding: 10px 60px;
+	padding: 110px 60px 10px 60px;
 	width: 100%;
 	box-sizing: border-box;
 	max-width: 1100px;
-	-webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.75);
-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.75);
+	-webkit-box-shadow: 0px 0px 12px 0px rgba(110,110,110,0.75);
+-moz-box-shadow: 0px 0px 12px 0px rgba(110,110,110,0.75);
+box-shadow: 0px 0px 12px 0px rgba(110,110,110,0.75);
 }
 
 </style>
