--- a/calendar.html
+++ b/calendar.html
@@ -21,13 +21,14 @@
 
 .calend {
 	display: inline-block;
-	padding: 110px 60px 10px 60px;
-	width: 100%;
+	padding: 10px 60px 10px 60px;
+	margin-top: 140px;
+	width: 95%;
 	box-sizing: border-box;
 	max-width: 1100px;
-	-webkit-box-shadow: 0px 0px 12px 0px rgba(110,110,110,0.75);
--moz-box-shadow: 0px 0px 12px 0px rgba(110,110,110,0.75);
-box-shadow: 0px 0px 12px 0px rgba(110,110,110,0.75);
+	-webkit-box-shadow: 0px 4px 8px 0px rgba(110,110,110,0.75);
+-moz-box-shadow: 0px 4px 8px 0px rgba(110,110,110,0.75);
+box-shadow: 0px 4px 8px 0px rgba(110,110,110,0.75);
 }
 
 </style>
