--- a/calendar.html
+++ b/calendar.html
@@ -31,6 +31,12 @@
 box-shadow: 0px 4px 8px 0px rgba(110,110,110,0.75);
 }
 
+.calend-header {
+	padding: 30px;
+	font-size: 35px;
+	font-weight: 500;
+}
+
 </style>
 
 </head>
@@ -52,6 +58,10 @@ box-shadow: 0px 4px 8px 0px rgba(110,110,110,0.75);
 	</div>
 
 	<div class="calend">
+		<div class="calend-header">
+			<h2>Calendar</h2>
+		</div>
+		<div class="calend-wrap">
 		<div id="calendar-wrap">
             <header>
                 <h1>August 2014</h1>
@@ -275,6 +285,7 @@ box-shadow: 0px 4px 8px 0px rgba(110,110,110,0.75);
 
             </div><!-- /. calendar -->
         </div><!-- /. wrap -->
+	</div>
 	</div>
 </div>
 
