--- a/calendar.html
+++ b/calendar.html
@@ -37,13 +37,13 @@ box-shadow: 0px 4px 8px 0px rgba(110,110,110,0.75);
 }
 
 .calend-header-wrap {
-	padding: 30px;
+	padding: 30px 30px 10px 30px;
 	border-bottom: 1px solid #eee;
 	text-align: left;
 }
 
 .calend-header-wrap h2 {
-	font-size: 32px;
+	font-size: 50px;
 	font-weight: 400;
 }
 
