--- a/calendar.html
+++ b/calendar.html
@@ -31,6 +31,10 @@
 box-shadow: 0px 4px 8px 0px rgba(110,110,110,0.75);
 }
 
+.calend-wrap {
+	margin-top: 25px;
+}
+
 .calend-header {
 	padding: 5px;
 	background-color: #fefefe;
