--- a/index.html
+++ b/index.html
@@ -350,6 +350,9 @@ function init()
         	<li class="top-navbar-li">
                 	<a href="belmontrobotics.github.io#donate">Donate</a>
         	</li>
+		<li class="top-navbar-li">
+                	<a href="belmontrobotics.github.io/calendar.html">Calendar</a>
+        	</li>
 		<li class="top-navbar-li picture">
                 </li>
 	</ul>
