--- a/calendar.html
+++ b/calendar.html
@@ -51,6 +51,12 @@ box-shadow: 0px 4px 8px 0px rgba(110,110,110,0.75);
 	font-weight: 400;
 }
 
+@media(max-width: 768px) {
+	.calend-header-wrap h2 {
+		font-size: 36px;
+	}
+}
+
 </style>
 
 </head>
