--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 }
 
 .top-img {
-	background: url("https://d2g8igdw686xgo.cloudfront.net/16772570_1481777595.5486.jpg") no-repeat 50% 50% fixed;
+	background: url("/img/team.jpg") no-repeat 50% 50% fixed;
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -370,7 +370,7 @@ function init()
 					</div>
 				</div>
 			</div>
-			<img id="go-down" src="/down.png"></img>
+			<img id="go-down" src="/img/down.png"></img>
 		</div>
 	</div>
 	<div class="content">
@@ -406,12 +406,12 @@ They are aiming to raise about $20,000 by end of Jan. They have started to conta
 								<input type="hidden" name="item_name" value="">
 								<input type="hidden" name="item_number" value="">
 								<input type="hidden" name="currency_code" value="USD">
-								<input type="image" name="submit" src="/paypal.png" alt="Paypal">
+								<input type="image" name="submit" src="/img/paypal.png" alt="Paypal">
 							</form>
 						</div>
 						<div class="donate-thingie">
 							<form action="https://www.gofundme.com/belmont-first-robotics">
-								<input type="image" src="/gofundme.png">
+								<input type="image" src="/img/gofundme.png">
 							</form>
 						</div>
                                         </p>
