--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ function init()
                 	<a href="belmontrobotics.github.io#donate">Donate</a>
         	</li>
 		<li class="top-navbar-li">
-                	<a href="belmontrobotics.github.io/calendar.html">Calendar</a>
+                	<a href="/calendar.html">Calendar</a>
         	</li>
 		<li class="top-navbar-li picture">
                 </li>
