--- a/calendar.html
+++ b/calendar.html
@@ -55,6 +55,14 @@ box-shadow: 0px 4px 8px 0px rgba(110,110,110,0.75);
 	.calend-header-wrap h2 {
 		font-size: 36px;
 	}
+
+	.calend {
+		padding: 10px 30px 10px 30px;
+	}
+
+	.calend-header-wrap {
+		padding: 15px 15px 8px 15px;
+	}
 }
 
 </style>
