--- a/calendar.html
+++ b/calendar.html
@@ -67,9 +67,55 @@ box-shadow: 0px 4px 8px 0px rgba(110,110,110,0.75);
 
 </style>
 
+<script>
+
+var CLIENT_ID = '1064302957896-kqnlepngg6iusaqeuuko3gntcnksmtra.apps.googleusercontent.com';
+
+var DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"];
+
+var SCOPES = "https://www.googleapis.com/auth/calendar.readonly";
+
+function handleClientLoad() {
+	gapi.load('client:auth2', initClient);
+}
+
+function initClient() {
+        gapi.client.init({
+        	discoveryDocs: DISCOVERY_DOCS,
+        	clientId: CLIENT_ID,
+          	scope: SCOPES
+  	});
+}
+
+function updateEvents()
+{
+	gapi.client.calendar.events.list({
+        	'calendarId': 'belmontschools.net_qucdk22mq5p84o573a88motvpk@group.calendar.google.com'
+        	//'timeMin': (new Date()).toISOString(),
+        	//'showDeleted': false,
+        	//'singleEvents': true,
+        	//'maxResults': 10,
+        	//'orderBy': 'startTime'
+        }).then(function(response) {
+          	var events = response.result.items;
+		console.log(events);
+	});
+}
+
+function init()
+{
+	handleClientLoad();
+
+	setInterval(function() {
+		updateEvents();
+	}, 2000);
+}
+
+</script>
+
 </head>
 
-<body>
+<body onload="init()">
 
 <div class="main">
 	<div class="navbar navbar-tall">
