--- a/calendar.html
+++ b/calendar.html
@@ -104,7 +104,7 @@ function updateEvents()
 
 function init()
 {
-	handleClientLoad();
+//	handleClientLoad();
 
 	setInterval(function() {
 		updateEvents();
@@ -116,6 +116,11 @@ function init()
 </head>
 
 <body onload="init()">
+
+<script async defer src="https://apis.google.com/js/api.js"
+	onload="this.onload=function(){};handleClientLoad()"
+	onreadystatechange="if (this.readyState === 'complete') this.onload()"
+</script>
 
 <div class="main">
 	<div class="navbar navbar-tall">
