--- a/calendar.html
+++ b/calendar.html
@@ -4,6 +4,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="/js/main.js"></script>
+<sript src="https://apis.google.com/js/api.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 <link href="/css/main.css" rel="stylesheet">
@@ -77,10 +78,6 @@ var SCOPES = "https://www.googleapis.com/auth/calendar.readonly";
 
 function handleClientLoad() {
 	gapi.load('client:auth2', initClient);
-
-	setInterval(function() {
-		updateEvents();
-	}, 2000);
 }
 
 function initClient() {
@@ -108,7 +105,11 @@ function updateEvents()
 
 function init()
 {
+	handleClientLoad();
 
+	setInterval(function() {
+		updateEvents();
+	}, 2000);
 }
 
 </script>
@@ -116,11 +117,6 @@ function init()
 </head>
 
 <body onload="init()">
-
-<script async defer src="https://apis.google.com/js/api.js"
-	onload="this.onload=function(){};handleClientLoad()"
-	onreadystatechange="if (this.readyState === 'complete') this.onload()"
-</script>
 
 <div class="main">
 	<div class="navbar navbar-tall">
