--- a/calendar.html
+++ b/calendar.html
@@ -69,7 +69,7 @@ box-shadow: 0px 4px 8px 0px rgba(110,110,110,0.75);
 
 <script>
 
-var CLIENT_ID = '1064302957896-kqnlepngg6iusaqeuuko3gntcnksmtra.apps.googleusercontent.com';
+var CLIENT_ID = 'AIzaSyBqKiVbclfkUE6d3rEYa1l2QVDZQNGx_U4';
 
 var DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"];
 
