--- a/calendar.html
+++ b/calendar.html
@@ -82,7 +82,7 @@ function handleClientLoad() {
 function initClient() {
         gapi.client.init({
         	discoveryDocs: DISCOVERY_DOCS,
-        	clientId: CLIENT_ID,
+        	key: CLIENT_ID,
           	scope: SCOPES
   	});
 }
