--- a/calendar.html
+++ b/calendar.html
@@ -97,8 +97,8 @@ function updateEvents()
         	//'maxResults': 10,
         	//'orderBy': 'startTime'
         }).then(function(response) {
-          	//var events = response.result.items;
-		console.log(response);
+          	var events = response.result.items;
+		console.log(events);
 	});
 }
 
