--- a/calendar.html
+++ b/calendar.html
@@ -151,11 +151,11 @@ function init()
 			</div>
 		</div>
 		<div class="calend-wrap">
-		<div id="calendar-wrap">
+		<div class="calendar-wrap">
             <header>
                 <h1>August 2014</h1>
             </header>
-            <div id="calendar">
+            <div class="calendar">
                 <ul class="weekdays">
                     <li>Sunday</li>
                     <li>Monday</li>
