--- a/calendar.html
+++ b/calendar.html
@@ -3,12 +3,14 @@
 <head>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://apis.google.com/js/api.js"></script>
 <script src="/js/main.js"></script>
+<script src="m_calendar.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 <link href="/css/main.css" rel="stylesheet">
 <link href="/css/navbar.css" rel="stylesheet">
-<link href="/css/calendar.css" rel="stylesheet">
+<link href="/css/m_calendar.css" rel="stylesheet">
 
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
 
@@ -73,6 +75,7 @@ var API_KEY = 'AIzaSyBqKiVbclfkUE6d3rEYa1l2QVDZQNGx_U4';
 var CLIENT_ID = '1064302957896-kqnlepngg6iusaqeuuko3gntcnksmtra.apps.googleusercontent.com';
 var DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"];
 var SCOPES = "https://www.googleapis.com/auth/calendar.readonly";
+var CALENDAR_ID = "belmontschools.net_qucdk22mq5p84o573a88motvpk@group.calendar.google.com";
 
 function handleClientLoad() {
 	gapi.load('client:auth2', initClient);
@@ -110,13 +113,15 @@ function updateEvents()
 
 function init()
 {
-	handleClientLoad()
+	//handleClientLoad()
 
-	setTimeout(function() {
+	//setTimeout(function() {
 		//setInterval(function() {
 			updateEvents();
 		//}, 2000);
-	}, 2000);
+	//}, 2000);
+
+	new Calendar($(".calend-wrap"), DISCOVERY_DOCS, CLIENT_ID, API_KEY, SCOPES, CALENDAR_ID);
 }
 
 </script>
@@ -151,230 +156,7 @@ function init()
 			</div>
 		</div>
 		<div class="calend-wrap">
-		<div class="calendar-wrap">
-            <header>
-                <h1>August 2014</h1>
-            </header>
-            <div class="calendar">
-                <ul class="weekdays">
-                    <li>Sunday</li>
-                    <li>Monday</li>
-                    <li>Tuesday</li>
-                    <li>Wednesday</li>
-                    <li>Thursday</li>
-                    <li>Friday</li>
-                    <li>Saturday</li>
-                </ul>
-
-                <!-- Days from previous month -->
-
-                <ul class="days">
-                    <li class="day other-month">
-                        <div class="date">27</div>
-                    </li>
-                    <li class="day other-month">
-                        <div class="date">28</div>
-                        <div class="event">
-                            <div class="event-desc">
-                                HTML 5 lecture with Brad Traversy from Eduonix
-                            </div>
-                            <div class="event-time">
-                                1:00pm to 3:00pm
-                            </div>
-                        </div>
-                    </li>
-                    <li class="day other-month">
-                        <div class="date">29</div>
-                    </li>
-                    <li class="day other-month">
-                        <div class="date">30</div>
-                    </li>
-                    <li class="day other-month">
-                        <div class="date">31</div>
-                    </li>
-
-                    <!-- Days in current month -->
-
-                    <li class="day">
-                        <div class="date">1</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">2</div>
-                        <div class="event">
-                            <div class="event-desc">
-                                Career development @ Community College room #402
-                            </div>
-                            <div class="event-time">
-                                2:00pm to 5:00pm
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-
-                    <!-- Row #2 -->
-
-                <ul class="days">
-                    <li class="day">
-                        <div class="date">3</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">4</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">5</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">6</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">7</div>
-                        <div class="event">
-                            <div class="event-desc">
-                                Group Project meetup
-                            </div>
-                            <div class="event-time">
-                                6:00pm to 8:30pm
-                            </div>
-                        </div>
-                    </li>
-                    <li class="day">
-                        <div class="date">8</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">9</div>
-                    </li>
-                </ul>
-
-                    <!-- Row #3 -->
-
-                <ul class="days">
-                    <li class="day">
-                        <div class="date">10</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">11</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">12</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">13</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">14</div><div class="event">
-                            <div class="event-desc">
-                                Board Meeting
-                            </div>
-                            <div class="event-time">
-                                1:00pm to 3:00pm
-                            </div>
-                        </div>
-                    </li>
-                    <li class="day">
-                        <div class="date">15</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">16</div>
-                    </li>
-                </ul>
-
-                    <!-- Row #4 -->
-
-                <ul class="days">
-                    <li class="day">
-                        <div class="date">17</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">18</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">19</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">20</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">21</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">22</div>
-                        <div class="event">
-                            <div class="event-desc">
-                                Conference call
-                            </div>
-                            <div class="event-time">
-                                9:00am to 12:00pm
-                            </div>
-                        </div>
-                    </li>
-                    <li class="day">
-                        <div class="date">23</div>
-                    </li>
-                </ul>
-
-                        <!-- Row #5 -->
-
-                <ul class="days">
-                    <li class="day">
-                        <div class="date">24</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">25</div>
-                        <div class="event">
-                            <div class="event-desc">
-                                Conference Call
-                            </div>
-                            <div class="event-time">
-                                1:00pm to 3:00pm
-                            </div>
-                        </div>
-                    </li>
-                    <li class="day">
-                        <div class="date">26</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">27</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">28</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">29</div>
-                    </li>
-                    <li class="day">
-                        <div class="date">30</div>
-                    </li>
-                </ul>
-
-                <!-- Row #6 -->
-
-                <ul class="days">
-                    <li class="day">
-                        <div class="date">31</div>
-                    </li>
-                    <li class="day other-month">
-                        <div class="date">1</div> <!-- Next Month -->
-                    </li>
-                    <li class="day other-month">
-                        <div class="date">2</div>
-                    </li>
-                    <li class="day other-month">
-                        <div class="date">3</div>
-                    </li>
-                    <li class="day other-month">
-                        <div class="date">4</div>
-                    </li>
-                    <li class="day other-month">
-                        <div class="date">5</div>
-                    </li>
-                    <li class="day other-month">
-                        <div class="date">6</div>
-                    </li>
-                </ul>
-
-            </div><!-- /. calendar -->
-        </div><!-- /. wrap -->
-	</div>
+		</div>
 	</div>
 </div>
 
