--- a/calendar.html
+++ b/calendar.html
@@ -117,7 +117,7 @@ function init()
 
 	//setTimeout(function() {
 		//setInterval(function() {
-			updateEvents();
+			//updateEvents();
 		//}, 2000);
 	//}, 2000);
 
@@ -128,12 +128,12 @@ function init()
 
 </head>
 
-<body>
+<body onload="init()">
 
-	<script async defer src="https://apis.google.com/js/api.js"
+	<!--<script async defer src="https://apis.google.com/js/api.js"
 	      onload="this.onload=function(){};init()"
 	      onreadystatechange="if (this.readyState === 'complete') this.onload()">
-	    </script>
+      </script>-->
 
 <div class="main">
 	<div class="navbar navbar-tall">
