--- a/calendar.html
+++ b/calendar.html
@@ -3,7 +3,7 @@
 <head>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://apis.google.com/js/api.js"></script>
+<!--<script src="https://apis.google.com/js/api.js"></script>-->
 <script src="/js/main.js"></script>
 <script src="/js/m_calendar.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -128,12 +128,12 @@ function init()
 
 </head>
 
-<body onload="init()">
+<body>
 
-	<!--<script async defer src="https://apis.google.com/js/api.js"
+	<script async defer src="https://apis.google.com/js/api.js"
 	      onload="this.onload=function(){};init()"
 	      onreadystatechange="if (this.readyState === 'complete') this.onload()">
-      </script>-->
+      </script>
 
 <div class="main">
 	<div class="navbar navbar-tall">
