--- a/calendar.html
+++ b/calendar.html
@@ -35,6 +35,8 @@ box-shadow: 0px 4px 8px 0px rgba(110,110,110,0.75);
 
 .calend-wrap {
 	margin-top: 0px;
+	text-align: center;
+	position: relative;
 }
 
 .calend-header {
