--- a/calendar.html
+++ b/calendar.html
@@ -25,6 +25,7 @@
 	display: inline-block;
 	padding: 10px 60px 10px 60px;
 	margin-top: 140px;
+	margin-botton: 60px;
 	width: 95%;
 	box-sizing: border-box;
 	max-width: 1100px;
@@ -37,6 +38,7 @@ box-shadow: 0px 4px 8px 0px rgba(110,110,110,0.75);
 	margin-top: 0px;
 	text-align: center;
 	position: relative;
+	min-height: 400px;
 }
 
 .calend-header {
