--- a/calendar.html
+++ b/calendar.html
@@ -25,7 +25,7 @@
 	display: inline-block;
 	padding: 10px 60px 10px 60px;
 	margin-top: 140px;
-	margin-botton: 60px;
+	margin-bottom: 60px;
 	width: 95%;
 	box-sizing: border-box;
 	max-width: 1100px;
@@ -81,7 +81,7 @@ var DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/calendar/v3/
 var SCOPES = "https://www.googleapis.com/auth/calendar.readonly";
 var CALENDAR_ID = "belmontschools.net_qucdk22mq5p84o573a88motvpk@group.calendar.google.com";
 
-function handleClientLoad() {
+/*function handleClientLoad() {
 	gapi.load('client:auth2', initClient);
 }
 
@@ -113,7 +113,7 @@ function updateEvents()
           	var events = response.result.items;
 		console.log(events);
 	});
-}
+}*/
 
 var calendar;
 
