--- a/calendar.html
+++ b/calendar.html
@@ -144,14 +144,15 @@ function init()
 <div class="main">
 	<div class="navbar navbar-tall">
 		<ul class="top-navbar">
+			<li class="top-navbar-li picture">
+				<a href="index.html"><img src="logo.png"></img></a>
+			</li>
 			<li class="top-navbar-li">
 	        		<a id="a-about">About</a>
 	        	</li>
 	        	<li class="top-navbar-li">
 	                	<a href="belmontrobotics.github.io#donate">Donate</a>
 	        	</li>
-			<li class="top-navbar-li picture">
-	                </li>
 		</ul>
 	</div>
 
