--- a/index.html
+++ b/index.html
@@ -378,6 +378,10 @@ function init()
 			<div class="content-group">
 				<div class="content-title">
 					<span>About Us</span>
+					<span>Donate</span>
+					<span>About FIRST</span>
+					<span>Members</span>
+					<span>Mentors</span>
 				</div>
 				<div class="content-text">
 					<p>
