--- a/index.html
+++ b/index.html
@@ -212,13 +212,12 @@
 	font-size: 24px;
 	cursor: pointer;
 	vertical-align: center;
-	transition: padding 0.3s;
+	transition: font-size 0.3s, padding 0.3s;
 }
 
 .title-li.active {
-	padding: 2px 0px;
-	font-size: 32px;
-	padding-left: 6px;
+	font-size: 28px;
+	padding-left: 8px 6px;
 }
 
 .title-li:hover:not(.active) {
