--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 	cursor: pointer;
 	vertical-align: center;
 	transition: font-size 0.3s, padding 0.3s;
+	min-height: 100vh;
 }
 
 .title-li.active {
@@ -367,6 +368,8 @@ function init()
 
 		$(".title-li").removeClass("active");
 		$(this).addClass("active");
+
+		$(window).scrollTop() = $(window).height();
 	});
 }
 
