--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ function init()
 		$(".title-li").removeClass("active");
 		$(this).addClass("active");
 
-		$(window).scrollTop() = $(window).height();
+		$(window).scrollTop($(window).height());
 	});
 }
 
