--- a/index.html
+++ b/index.html
@@ -213,6 +213,9 @@
 	cursor: pointer;
 	vertical-align: center;
 	transition: font-size 0.3s, padding 0.3s;
+}
+
+.content-text {
 	min-height: 100vh;
 }
 
