--- a/index.html
+++ b/index.html
@@ -420,14 +420,14 @@ function init()
 			<div class="content-group">
 				<div class="content-title">
 					<ul class="title-list">
-						<li class="title-li" id="title-about" data-text-element="content-about">About Us</li>
+						<li class="title-li active" id="title-about" data-text-element="content-about">About Us</li>
 						<li class="title-li" id="title-donate" data-text-element="content-donate">Donate</li>
 						<li class="title-li" id="title-aboutfirst" data-text-element="content-aboutfirst">About FIRST</li>
 						<li class="title-li" id="title-members" data-text-element="content-members">Members</li>
 						<li class="title-li" id="title-mentors" data-text-element="content-mentors">Mentors</li>
 					</ul>
 				</div>
-				<div class="content-text" id="content-about">
+				<div class="content-text" id="content-about" style="display:table-cell">
 					<p>
 						<a class="anchor" name="about"></a>
 						When Dean Kamen started the first FRC (First Robotic Competition) in 1992 in a very small scale, he probably could not imagine that in 2016, about 3100 teams with roughly 75,000 students and 19,000 mentors from 24 countries would build robots and take part in the competition. Last year they competed in 53 Regional Competitions, 65 District Qualifying Competitions, and 8 District Championships. In addition to on-field competition, teams and team members competed for awards recognizing entrepreneurship, creativity, engineering, industrial design, safety, controls, media, quality, and exemplifying the core values of the program.
