--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@
 	padding-left: 6px;
 }
 
+#footer {
+	height: 300px;
+}
+
 @media (max-width: 1000px) {
 	.content-table, .content-group, .content-title, .content-text {
 		display: block;
@@ -539,6 +543,8 @@ They are aiming to raise about $20,000 by end of Jan. They have started to conta
 					</ul>
 				</div>
 			<div>
+		</div>
+		<div id="footer">
 		</div>
 	</div>
 <div>
