--- a/index.html
+++ b/index.html
@@ -274,6 +274,15 @@
 		background-attachment: scroll;
 	}
 
+	.title-li {
+		display: inline-block;
+		padding: 15px;
+	}
+
+	.title-li:hover, .title-li.active {
+		padding: 15px;
+	}
+
 	#donate-text {
 		text-align: center;
 	}
