--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 		padding: 15px;
 	}
 
-	.title-li:hover, .title-li.active {
+	.title-li.active, .title-li:hover:not(.active) {
 		padding: 15px;
 	}
 
